kubernetes/apps/automation-data/nocodb/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nocodb
  annotations:
    external-dns.k8s.io/audience: internal
spec:
  hostnames:
    - nocodb.lab.supermorphic.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: networking
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: nocodb
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
